# PyGenesis

./: .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  README.md  flake.nix  init_project.sh  pyproject.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 6xzbwd4dhpyry16bh8xi5l6iamw7468w-source
.github/workflows/: ci.yml
src/my_project/: main.py
tests/: test_basic.py
